# thunderbird

./: .bumpversion.cfg  .cruft.json  .env  .gitignore  .ncrc  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  docker-compose.yml  entrypoint.sh  environment-docs.yml  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: anchore-analysis.yml  bump-version.yml  ci.yml  docker-publish-branch.yml  docker-publish-dev.yml  docker-publish.yml  docker-release.yml  image-scan.yml  python-ci.yml
dev-component/: DEVELOPMENT.md  docker-compose-extra.yml  wps.cfg
docs/: Makefile  configuration.md  dev_guide.md  index.md  installation.md  processes.md
docs/formatted_demos/: wps_decompose_flow_vectors_demo.html  wps_decompose_flow_vectors_demo.md  wps_generate_climos_demo.html  wps_generate_climos_demo.md  wps_generate_prsn_demo.html  wps_generate_prsn_demo.md  wps_split_merged_climos_demo.html  wps_split_merged_climos_demo.md  wps_update_metadata_demo.html  wps_update_metadata_demo.md
docs/source/: .gitignore  conf.py  configuration.rst  dev_guide.rst  installation.rst  processes.rst
docs/source/notebooks/: demo_processes.ipynb  example.ipynb  wps_decompose_flow_vectors_demo.ipynb  wps_decompose_flow_vectors_rename.ipynb  wps_generate_climos.ipynb  wps_generate_climos_demo.ipynb  (+3 more)
etc/: sample-custom.cfg
notebooks/: README.md  demo.ipynb  demo_decompose_flow_vectors.ipynb  demo_generate_prsn.ipynb  demo_processes.ipynb  demo_requirements.txt  demo_split_merged_climos.ipynb  demo_update_metadata.ipynb  wps_decompose_flow_vectors_demo.ipynb  wps_generate_climos_demo.ipynb  wps_generate_prsn_demo.ipynb  wps_split_merged_climos_demo.ipynb  wps_update_metadata_demo.ipynb
notebooks/demo_individual/: demo_generate_climos.ipynb  demo_generate_prsn.ipynb  demo_split_merged_climos.ipynb  demo_update_metadata.ipynb
notebooks/demos/: demo.ipynb
pavics-component/: .gitignore  docker-compose-extra.yml  thunderbird-magpie-permission.cfg.template  thunderbird-magpie-provider.cfg.template  thunderbird_canarie_api_monitoring.py.template  wps.cfg.template
tests/: __init__.py  common.py  test_describe.py  test_wps_caps.py  test_wps_decompose_flow_vectors.py  test_wps_generate_climos.py  test_wps_generate_prsn.py  test_wps_hello.py  test_wps_split_merged_climos.py  test_wps_update_metadata.py  testdata.py  utils.py
tests/data/: tiny_daily_pr.nc  tiny_daily_tasmax.nc  tiny_daily_tasmin.nc  tiny_downscaled_pr.nc  tiny_downscaled_pr_packed.nc  tiny_downscaled_tasmax.nc  tiny_downscaled_tasmax_climos.nc  tiny_fd_monthly.nc  tiny_gdd_seasonal.nc  tiny_hydromodel_gcm_climos.nc  tiny_tnn_monthly.nc  tiny_tr_annual.nc  tiny_txx_monthly.nc  tiny_wsdi_annual.nc
tests/metadata-conversion/: fix-CLIMDEX-downscale-BCCAQ.sh  fix-downscaled-climos.sh  simple-conversion.yaml  updates-CLIMDEX-downscale-BCCAQ.yaml  updates-downscaled-climo.yaml  updates-downscaled.yaml  updates-hydromodel-dgcm.yaml
thunderbird/: __init__.py  __version__.py  cli.py  default.cfg  dry_run_utils.py  utils.py  wps_io.py
thunderbird/processes/: __init__.py  wps_decompose_flow_vectors.py  wps_generate_climos.py  wps_generate_prsn.py  wps_say_hello.py  wps_split_merged_climos.py  wps_update_metadata.py
(+2 files in other folders)
