[tool.poetry]
name = "thunderbird"
version = "1.2.3"
description = "A Web Processing Service for Climate Explorer data preparation"
authors = [
    "Nikola Rados",
    "Sangwon Lim",
    "Cairo Sanders",
    "James Hiebert <hiebert@uvic.ca",
    "Eric Yvorchuk <eyvorchuk@uvic.ca",
    "Long Vu",
]
license = "GPL3"
readme = "README.md"
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/thunderbird"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
packages = [
    {include = "thunderbird"},
]
include = [
    "tests/data/*.nc",
    "tests/metadata-conversion/*.yaml",
]

[[tool.poetry.source]]
name = "pcic"
url = "https://pypi.pacificclimate.org/simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.9,<4"
ce-dataprep = { version = "^0.8.8", source = "pcic" }
cftime = "1.6.3"
click = "^8.1.7"
gunicorn = "^22.0.0"
jinja2 = ">=2.11.3,<3.1.0"
netcdf4 = "1.6.2"
numpy = "^1.20.0"
psutil = "5.9.8"
pywps = "4.2.9"
xarray = "^2024.2.0"
nchelpers = { version = "^5.5.11", source = "pcic" }
werkzeug = "1.0.1"
wps-tools = { version = "^2.1.1", source = "pcic" }
cdo = "1.6.0"
poetry-dotenv-plugin = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
flake8 = "^7.0.0"
pytest-flake8 = "^1.1.1"
ipython = "<8.24.0"
pytest-notebook = "^0.10.0"
nbsphinx = "^0.9.4"
nbval = ">=0.9.6"
nbconvert = "^7.16.4"
sphinx = "2.4.4"
bumpversion = "^0.6.0"
twine = "^5.1.0"
cruft = "^2.15.0"
nbclient = ">=0.5.10,<0.6.0"
black = "22.3.0"
jupyterlab = "2.1.5"
ipywidgets = "7.5.1"
nodejs = "0.1.1"
birdhouse-birdy = "0.8.4"
beautifulsoup4 = "4.9.3"
notebook = ">=6.1.5"
pygments = ">=2.7.4"
pyproj = "3.6.1"

[tool.poetry.scripts]
thunderbird = "thunderbird.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "online: marks tests that use online resources (deselect with '-m \"not online\"')",
    "slow: marks tests that are slow (deselect with '-m \"not slow\"')",
]
