[bumpversion]
current_version = 0.6.0
commit = True
tag = True

[metadata]
description-file = README.md

[options]
include-package-data = True

[options.package_data]
thunderbird = tests/data/*.nc, tests/metadata-conversion/*.yaml

[bumpversion:file:thunderbird/__version__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:Dockerfile]
search = Version="{current_version}"
replace = Version="{new_version}"

[bumpversion:file:.cruft.json]
search = "version": "{current_version}",
replace = "version": "{new_version}",

[tool:pytest]
addopts =
	--strict
	--tb=native
python_files = test_*.py
markers =
	online: mark test to need internet connection
	slow: mark test to be slow
